# docs/swagger.json
@@ -39,19 +39,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ResponseMsg"
+                            "$ref": "#/definitions/controller.ResponseMsg"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     }
                 }
@@ -72,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.DateRangeRequest"
+                            "$ref": "#/definitions/controller.DateRangeRequest"
                         }
                     }
                 ],
@@ -80,19 +80,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ResponseMsg"
+                            "$ref": "#/definitions/controller.ResponseMsg"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     }
                 }
@@ -120,19 +120,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ResponseMsg"
+                            "$ref": "#/definitions/controller.ResponseMsg"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     }
                 }
@@ -153,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.DateRangeRequest"
+                            "$ref": "#/definitions/controller.DateRangeRequest"
                         }
                     }
                 ],
@@ -161,19 +161,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ResponseMsg"
+                            "$ref": "#/definitions/controller.ResponseMsg"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorMsg"
+                            "$ref": "#/definitions/controller.ErrorMsg"
                         }
                     }
                 }
@@ -181,7 +181,7 @@
         }
     },
     "definitions": {
-        "main.DateRangeRequest": {
+        "controller.DateRangeRequest": {
             "type": "object",
             "required": [
                 "start"
@@ -204,7 +204,7 @@
                 }
             }
         },
-        "main.ErrorMsg": {
+        "controller.ErrorMsg": {
             "type": "object",
             "properties": {
                 "error": {
@@ -214,7 +214,18 @@
                 }
             }
         },
-        "main.MQTTRecord": {
+        "controller.ResponseMsg": {
+            "type": "object",
+            "properties": {
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.MQTTRecord"
+                    }
+                }
+            }
+        },
+        "model.MQTTRecord": {
             "type": "object",
             "properties": {
                 "payload": {
@@ -225,17 +236,6 @@
                     "description": "Time RFC3339",
                     "type": "string",
                     "example": "2020-01-01T00:00:00Z"
-                }
-            }
-        },
-        "main.ResponseMsg": {
-            "type": "object",
-            "properties": {
-                "records": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.MQTTRecord"
-                    }
                 }
             }
         }
